k8s/apps/actual-budget/manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: actual-budget
  labels:
    app.kubernetes.io/name: actual-budget
    app.kubernetes.io/component: webserver
