k8s/apps/actual-budget/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget
  labels:
    app.kubernetes.io/name: actual-budget
    app.kubernetes.io/component: webserver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  tls:
    - secretName: tls-budget.ftsell.de
      hosts:
        - budget.lly.sh
        - budget.ftsell.de
  rules:
    - host: budget.lly.sh
      http: &httpConfig
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actual-budget
                port:
                  name: http

    - host: budget.ftsell.de
      http: *httpConfig
